fix alignment

--- a/packages/ui/src/common/cards/DetailsCard/DetailsCard.module.scss
+++ b/packages/ui/src/common/cards/DetailsCard/DetailsCard.module.scss
@@ -31,6 +31,7 @@
 
         .value {
           font-weight: 600;
+          min-width: 200px;
         }
       }
     }
